--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 #SWAGGER-PARAMS
 SWAGGER_TITLE=Product
-SWAGGER_DESCRIPTION=Controlador de registro de productos
+SWAGGER_DESCRIPTION=Controladores para la gestion de prestamos 
 SWAGGER_VERSION=0.1
 SWAGGER_HOST=
 SWAGGER_BASEPATH=
@@ -15,7 +15,6 @@ DEFAULT_LANGUAGE=ES
 
 #HEADERS
 LENGUAGE_HEADER=X-Lang
-ID_MARKET_HEADER=X-Id-Market
 
 #LOCAL-SERVER
 LOCAL_PORT=8080
@@ -23,6 +22,3 @@ LOCAL_PORT=8080
 #LENGUAJES
 ES=utils/language/es.json
 EN=utils/language/en.json
-
-#SERVICE_NAME
-SERVICE_NAME=WS_BaseLine_Golang
