Se realiza cambio en nombramiento de tabla, y nuevo endpoint para el registro de pagos

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 #POSTGRESQL
-
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=mysecretpassword
+DB_DRIVER=postgres
+DB_NAME=postgres
+DB_PORT=5432
 
 #SWAGGER-PARAMS
 SWAGGER_TITLE=Product
