se eliminar valores en archivo .env

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 #POSTGRESQL
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=mysecretpassword
-DB_DRIVER=postgres
-DB_NAME=postgres
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_DRIVER=
+DB_NAME=
 DB_PORT=5432
 
 #SWAGGER-PARAMS
